# log_viewer

./: .gdbinit  .gitignore  CMakeLists.txt  TODO.md  evict_cache.cpp  printers.py
cmake/: embed_shader.cmake
scripts/: build-tex.sh  svg-to-bitmap.sh
shaders/: fragment.glsl  gp_frag.glsl  gp_shader.cpp  gp_shader.h  gp_vert.glsl  stripe_frag.glsl  stripe_shader.cpp  stripe_shader.h  stripe_vert.glsl  text_frag.glsl  text_shader.cpp  text_shader.h  text_vert.glsl  vertex.glsl
src/: app.cpp  app.h  app_window.cpp  app_window.h  button_view.cpp  button_view.h  color.h  content_view.cpp  content_view.h  dataset.h  dynarray.h  event.h  file.cpp  file.h  file_view.cpp  file_view.h  find_view.cpp  find_view.h  finder.cpp  finder.h  font.cpp  font.h  gp_shader.cpp  gp_shader.h  input_processor.cpp  input_view.cpp  input_view.h  label_view.cpp  label_view.h  layout.h  linenum_view.cpp  linenum_view.h  loader.cpp  loader.h  log.h  main.cpp  parser.cpp  parser.h  resizable.h  scrollbar.cpp  (+17 more)
test/: tailer.py
